# oatpp-base-project

./: .gitignore  CMakeLists.txt  Dockerfile  ReadMe.md  TODO.md
libs/oatpp/lib/win-x64/oatpp-1.3.0/: oatppTargets-release.cmake  oatppTargets.cmake
libs/oatpp/lib/win-x64/oatpp-sqlite-1.3.0/: oatpp-sqliteConfig.cmake  oatpp-sqliteTargets-debug.cmake  oatpp-sqliteTargets-release.cmake  oatpp-sqliteTargets.cmake
libs/oatpp/lib/win-x64/oatpp-swagger-1.3.0/: oatpp-swaggerTargets-debug.cmake  oatpp-swaggerTargets-release.cmake  oatpp-swaggerTargets.cmake
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  RootDefines.hpp  SwaggerComponent.hpp  TokenAuthorizationHandler.hpp
src/controller/: ControllerDefines.hpp  StaticController.hpp  UserController.hpp
src/db/: DbDefines.hpp  UserDb.hpp
src/dto/: DtoDefines.hpp  PageDto.hpp  StatusDto.hpp  UserDto.hpp
src/service/: ServiceDefines.hpp  UserService.cpp  UserService.hpp
test/: UserControllerTest.cpp
test/app/: TestClient.hpp  TestDatabaseComponent.hpp
utility/: cmake-utils.cmake
